web/styles/message_row.css
/* ... */
.message_edit_save {
    /* Match Save button's basic colors to
       the compose box Send button. */
    color: var(--color-compose-send-button-icon-color);
    background-color: var(--color-compose-send-button-background);

    &:hover {
        background-color: var(
            --color-compose-send-button-background-interactive
        );
    }

    &:disabled {
        /* Replicate disabled values, without any color shifts. */
        cursor: not-allowed;
        opacity: 0.5;
    }
}

.message_edit_cancel,
.message_edit_close {
    color: var(--color-exit-button-text);
    background: var(--color-exit-button-background);

    &:hover {
        background: var(--color-exit-button-background-interactive);
    }
}

.edit-content-container {
    border-radius: 4px;
    border: 1px solid var(--color-message-content-container-border);
    transition: border-color 0.2s ease;
    display: grid;
    grid-template-areas: "message-edit-content";

    &:has(.message_edit_content:focus) {
        border-color: var(--color-message-content-container-border-focus);
    }

    .message-edit-textbox {
        /* Setting `position:relative` on this container ensures that .copy-button
           (a possible immediate child with `position: absolute`) is positioned
           relative to this container instead of <html>. */
        position: relative;
        grid-area: message-edit-content;

        .textarea-over-limit {
            background-color: var(
                --color-compose-message-content-background-over-limit
            );
        }

        .textarea-approaching-limit {
            background-color: var(
                --color-compose-message-content-background-approaching-limit
            );
        }
    }
}

.message_edit_content {
    max-height: var(--max-message-edit-height);
    width: 100%;
    min-width: 206px;
    min-height: 52px;
    box-sizing: border-box;
    color: var(--color-text-default);
    background-color: var(--background-color-textarea);
    /* Flatten the bottom edge of the textarea to
    merge with the flat top edge of the buttons row */
    border-radius: 3px 3px 0 0;
    vertical-align: middle;
    border: none;
    /* Match textarea padding to compose box and
       message-edit preview area. */
    padding: 5px 5px 0;
    margin: 0;

    box-shadow: none;

    font-size: 1em;
    line-height: var(--base-line-height-unitless);
    font-family: inherit;

    &:focus {
        outline: 0;
    }

    &:read-write {
        resize: vertical !important;
    }

    &:read-only,
    &:disabled {
        cursor: not-allowed;
    }
}

.message-editing-animation {
    display: inline-flex;
    align-items: baseline;
    margin-left: 3px;
    width: 40px;
    height: 5px;

    /* Avoid this animation element blocking clicks on .edit-notifications
       to display the message's edit history. */
    pointer-events: none;

    .y-animated-dot {
        width: 4px;
        height: 4px;
        background-color: hsl(0deg 0% 53%);
        border-radius: 50%;
        margin-left: 3px;
        opacity: 0;

        &:nth-child(1) {
            animation: typing 1s infinite 0.2s;
        }

        &:nth-child(2) {
            animation: typing 1s infinite 0.4s;
        }

        &:nth-child(3) {
            animation: typing 1s infinite 0.6s;
        }
    }
}

@keyframes typing {
    0% {
        opacity: 0;
        transform: translateY(0);
    }

    50% {
        opacity: 1;
        transform: translateY(-3px);
    }

    100% {
        opacity: 0;
        transform: translateY(0);
    }
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: hsl(0deg 0% 63%);

    &.expired {
        color: hsl(4deg 58% 33%);
    }
}

.message-edit-timer {
    display: none;
    /* Center vertically relative to
       buttons. */
    align-self: center;
    /* Use flexbox to position to far right of
       the Save and Cancel buttons. */
    margin-left: auto;
}

.message-edit-feature-group {
    border-radius: 0 0 3px 3px;
    background-color: var(--color-message-formatting-controls-container);
    /* margin on either side to let the border of
       .edit-content-container show through. */
    margin: 0 1px;
}

.message_edit_save .loader {
    display: none;
    /* 28px at 16px/1em */
    height: 1.75em;
    width: 1.75em;
    grid-area: button-display;
    justify-self: center;
    z-index: 1;
}

.message_edit_save:has(.showing-button-spinner) {
    /* We want to maintain the width of the Save button
       in an i18n friendly way; this quick grid ensures
       that the width of the text holds the button open,
       while the styles above ensure the spinner's
       centering. */
    display: grid;
    grid-template: "button-display";
}

.showing-button-spinner {
    visibility: hidden;
    grid-area: button-display;
    z-index: 0;
}

.edit-controls {
    .button-wrapper {
        cursor: not-allowed;
    }
}

.message-edit-button-disabled {
    pointer-events: none;
}

/* Reduce some of the heavy padding from Bootstrap. */
.message_edit_form {
    margin-bottom: 10px;
    cursor: default;

    .edit-form {
        /* Override Bootstrap. */
        margin-bottom: 0;
    }

    .edit-controls {
        margin-left: 0;
        margin-top: 0;
    }

    .preview_message_area {
        max-height: var(--max-message-edit-height);
        grid-area: message-edit-content;
    }
}

.message_edit_notice {
    display: inline-flex;
    align-items: center;
    margin-left: auto;
    padding-right: 0.5714rem;
    cursor: pointer;
    color: var(--color-text-muted);
    opacity: 0.7;

    .zulip-icon {
        font-size: 1.0714em;
        width: 1.0666em;
        height: 1.0666em;
        vertical-align: middle;
        transition: opacity 0.2s ease;
        color: var(--color-text-muted);

        &:hover {
            opacity: 1;
        }
    }
}
/* ... */

